work started on user details

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         </div>
     </div>
-7
+
     <header>
         <img src="logo-removebg-preview.png" alt="">
         <ul>
@@ -264,19 +264,30 @@
 
                     <div class="order-box-after-burgers">
                         <div class="order-box-upper">
-                            <div class="small-sphere">
-                                Do you Know...?
+                            <div class="facts-container">
+                                <div class="small-sphere">
+                                    Do you Know...?
+                                </div>
+                                <div id="facts" class="big-sphere">
+                                    <!--  <p>The oldest American restaurant still in service today is Boston's very own Union Oyster House, founded in 1826</p> -->
+                                    <p>The word restaurant is French, originally meaning "food that restores" </p>
+                                    <p>17% of diners' meals go uneaten in restaurants</p>
+                                    <p>The oldest fast food restaurant chain is White Castle, founded in 1921</p>
+                                    <p>Half of all adults have - at some point - worked in a restaurant</p>
+                                </div>
                             </div>
-                            <div id="facts" class="big-sphere">
-                               <!--  <p>The oldest American restaurant still in service today is Boston's very own Union Oyster House, founded in 1826</p> -->
-                                <p>The word restaurant is French, originally meaning "food that restores" </p>
-                                <p>17% of diners' meals go uneaten in restaurants</p>
-                                <p>The oldest fast food restaurant chain is White Castle, founded in 1921</p>
-                                <p>Half of all adults have - at some point - worked in a restaurant</p>
-                            </div>
-                            
                         </div>
                         <div class="box">
+                            <div class="user-details">
+                                <i class="bi bi-person-fill"></i>
+                                <p> <span class="name"></span>Priyanshu</p>
+                                <p> <span id="displayContact"></span>7876641139</p>
+
+                            </div>
+
+                            <div class="order-details">
+
+                            </div>
                             <!-- <p> <span class="name" ></span></p>
                             <p> <span id="displayContact"></span></p>
                             <div id="cost">Total Cost: $<span id="totalCost">0</span></div>
