facts animation added

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                                 Do you Know...?
                             </div>
                             <div id="facts" class="big-sphere">
-                                <p>The oldest American restaurant still in service today is Boston's very own Union Oyster House, founded in 1826</p>
+                               <!--  <p>The oldest American restaurant still in service today is Boston's very own Union Oyster House, founded in 1826</p> -->
                                 <p>The word restaurant is French, originally meaning "food that restores" </p>
                                 <p>17% of diners' meals go uneaten in restaurants</p>
                                 <p>The oldest fast food restaurant chain is White Castle, founded in 1921</p>
