fixed user details

--- a/index.html
+++ b/index.html
@@ -280,13 +280,13 @@
                         <div class="box">
                             <div class="user-details">
                                 <i class="bi bi-person-fill"></i>
-                                <p> <span class="name"></span>Priyanshu</p>
+                                <p class="username"> <span class="name"></span>Priyanshu</p>
                                 <p> <span id="displayContact"></span>7876641139</p>
 
                             </div>
 
                             <div class="order-details">
-
+                                <div id="cost">Total Cost: $<span id="totalCost">0</span></div>
                             </div>
                             <!-- <p> <span class="name" ></span></p>
                             <p> <span id="displayContact"></span></p>
