started working intop drinks

--- a/index.html
+++ b/index.html
@@ -469,8 +469,17 @@
                         </div>
                     </div>
 
-                    <div class="top-pizza">
-
+                    <div class="top-drinks">
+                        
+                                <div class="child-img-drinks">
+                                    <img id="drink1" src="/img/" alt="">
+                                    <img id="drink2" src="/img/" alt="">
+                                    <img id="drink3" class="img-three" src="/img/" alt="">
+                                </div>
+                                <div class="parent-image-drinks">
+                                    <img src="/img/top drinks/cold_coffee-removebg-preview.png" alt="" onclick="burgers()">
+                                    <button id="click-me" onclick="burgers()">Click Me</button>
+                                </div>
                     </div>
                 </div>
             </div>
