--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 </head>
 
 <body>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
+    2
     <div class="page1">
         <div id="popupModal" class="modal">
             <div class="modal-content">
@@ -464,6 +467,7 @@
                                 <button id="req-btn" onclick="preOrderDisplay()">Regular</button>
                                 <button id="pre-btn" onclick="preOrderDisplay()">Pre Order</button>
                             </div>
+                            
                             <div class="user-details-cart">
                                 <h3>Name</h3>
                                 <p class="username"> <span class="name"></span></p>
@@ -481,6 +485,7 @@
             </div>
 
         </div>
+        
     </div>
     <!--  <div class="container3">
 
