--- a/index.html
+++ b/index.html
@@ -131,15 +131,15 @@
                     <h3 id="special-text"></h3>
                     <div class="slideshow-container">
                         <div class="mySlides fade">
-                            <img src="/img/today's special 1.jpg" style="width:100%">
+                            <img src="/today's special 1.jpg" style="width:100%">
                         </div>
 
                         <div class="mySlides fade">
-                            <img src="/img/today's special 2.jpg" style="width:100%">
+                            <img src="/today's special 2.jpg" style="width:100%">
                         </div>
 
                         <div class="mySlides fade">
-                            <img src="/img/today's special 3.jpg" style="width:100%">
+                            <img src="/today's special 3.jpg" style="width:100%">
                         </div>
                     </div>
                 </div>
@@ -594,7 +594,7 @@
             </div>
         </div>
         </div>
-            <img id="chef-img-Pmodal" src="img/chef-removebg-preview.png" alt="">
+            <img id="chef-img-Pmodal" src="/chef-removebg-preview.png" alt="">
         </div>
     </div>
 
